# ChadOSRS

./: .gitignore  MEMORY.md  README.md  pyproject.toml  run_demo.py
bot_core/: __init__.py  engine.py  fsm.py  interfaces.py  navigation.py  runtime.py  safety.py  states.py  types.py  world_model.py
bot_core/actions/: __init__.py  simulated.py
bot_core/adapters/: __init__.py  real_stub.py  runelite_http.py
bot_core/perception/: __init__.py  simulated.py
bot_core/simulator/: __init__.py  grid_world.py
configs/: dev.json  real_stub.json  runelite_http.json
gui/: main.py
runelite_telemetry_plugin/: .project  README.md  build.gradle  gradle.properties  settings.gradle
runelite_telemetry_plugin/src/main/java/com/asugan/telemetry/: DevRuneLiteLauncher.java  TelemetryBridgeConfig.java  TelemetryBridgePlugin.java  TelemetryCenterOverlay.java  TickSnapshot.java
runelite_telemetry_plugin/src/main/resources/: runelite-plugin.properties
tests/: test_engine.py  test_runelite_http.py  test_runtime.py
