[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-core-starter"
version = "0.1.0"
description = "Minimal bot core starter with FSM, tick loop, and grid simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["bot_core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
